# Personal_ChatGPT

./: .gitignore  config.yaml  main.py  pyproject.toml  requirements.txt  test_notebook.ipynb
data/: Arindam_dec_2025.docx  SETUP.md  TJX Case Study Jan 2026.pptx
exception/: custom_exception.py  custom_exception_with_logger.py
logger/: __init__.py  custom_logger.py
prompt/: prompt_library.py  prompt_metadata.py
src/: data_ingestion.py  qa_rag.py
utils/: APIKey_loader.py  model_loader.py  qdrant_vdb.py  qdrant_vector_db.py  s3_operations.py  s3_ops.py
