[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "PERSONAL-CHATGPT"
version = "0.1.0"
description = "AI system where you can continuously upload the contents (videos, tweets, documents, PDFs, screenshots) and the AI learns from everything and feeds it to become an expert in your business"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [{ name = "Arindam Choudhury" }]

license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
